# fast_api

./: .gitignore  Makefile  README.md  pyproject.toml
src/app/: image_utils.py  main.py  model_loader.py
