[project]
name = "ml-serving"
version = "0.1.0"
description = ""
authors = [
    {name = "aleksei",email = "bscadet@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic (>=2.11.4,<3.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "segmentation-models-pytorch (>=0.5.0,<0.6.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "torchvision (>=0.22.0,<0.23.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "flake8 (>=7.2.0,<8.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "transformers (>=4.51.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "app"
from = "src"
